bugfix: object-browser horizontal scrollbar fix

--- a/client/scss/Panels/ObjectBrowser/ObjectBrowserPanel.scss
+++ b/client/scss/Panels/ObjectBrowser/ObjectBrowserPanel.scss
@@ -34,4 +34,8 @@
       }
     }
   }
+
+  .tab-content {
+    overflow: visible;
+  }
 }
